# beaconFace

./: C++.gitignore  CMakeLists.txt  README.md
common/: common.cpp  common.h
cots/gtest/: CMakeLists.txt
cots/mnisten/: CMakeLists.txt
cots/script/: .install_openface.sh.swp  install_openface.sh
src/: face_train.cpp  main.cpp
test/: common_test.cpp  unittest.cpp  unittest.h
